test/sc++/error/forall-array-comma.scpp
../../scc/error/forall-array-comma.sc